--- a/README.rdoc
+++ b/README.rdoc
@@ -1,28 +1,5 @@
 == README
 
-This README would normally document whatever steps are necessary to get the
-application up and running.
+A sample app created by following Michael Hartl's "Ruby on Rails tutorial" (chapter 3 => ?) (https://www.railstutorial.org/) which was recommended in The Odin Project (theodinproject.com) curriculum.
 
-Things you may want to cover:
-
-* Ruby version
-
-* System dependencies
-
-* Configuration
-
-* Database creation
-
-* Database initialization
-
-* How to run the test suite
-
-* Services (job queues, cache servers, search engines, etc.)
-
-* Deployment instructions
-
-* ...
-
-
-Please feel free to use a different markup language if you do not plan to run
-<tt>rake doc:app</tt>.
+This is my third or fourth simple project in Rails and I feel much more comfortable. So far I've learnt the basics of MVC, cookies, API's and the RESTful convention(or architecture?). 
